# genshin-checkin-helper

./: .editorconfig  Dockerfile  Dockerfile.architecture  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
genshincheckinhelper/: config.py  main.py
genshincheckinhelper/config/: config.example.json
