[tool.poetry]
name = "genshin-checkin-helper"
version = "1.2.0"
description = "More than check-in for Genshin Impact."
authors = ["Bobby <bobby@fiery.me>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8, <3.12"
genshinhelper = {git = "https://github.com/y1ndan/genshinhelper2.git", rev = "1382b89d0ee1f5dfcbe1425398fb4cfc260ddcdd"}
onepush = "1.1.1"
schedule = "^1.2.1"
nest-asyncio = "^1.6.0"
genshin = "^1.6.3"
aiohttp = "^3.9.5"
pydantic = "^2.7.1"
anticaptchaofficial = "^1.0.60"
qrcode = {extras = ["pil"], version = "^7.4.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
